[project]
name = "cmdassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "openai>=1.93.2",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pydub>=0.25.1",
    "pynput>=1.8.1",
    "sievedata>=1.5.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
